...
                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                            <attributedString key="attributedText">
                                                                                <fragment content="Scope">
                                                                                    <attributes>
                                                                                        <color key="NSColor" red="0.94282064519702791" green="0.97054204734618643" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                    </constraints>
                                                </tableViewCellContentView>
                                                <accessibility key="accessibilityConfiguration" identifier="menu_suggestedEvent" label="Menu - Suggested Event">
                                                    <accessibilityTraits key="traits" selected="YES"/>
                                                    <bool key="isElement" value="YES"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rl0-2u-DCb">
                                                        <rect key="frame" x="0.0" y="0.0" width="327" height="20"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="swipeCard_eventBtn" label="Swipe Card - Event Button"/>
                                                        <connections>
                                                            <action selector="showEventDetails:" destination="hVs-Hx-MMo" eventType="touchUpInside" id="C7I-iY-vo0"/>
...
                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q9J-8w-Cvu" userLabel="swipeCard - profileBtn">
                                        <rect key="frame" x="0.0" y="6" width="343" height="84"/>
                                        <accessibility key="accessibilityConfiguration" identifier="swipeCard_profileBtn"/>
                                        <state key="normal" image="arrow up"/>
                                        <connections>
...
                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <state key="normal" backgroundImage="Login Button">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                    <constraint firstAttribute="width" id="RsW-ph-iIB"/>
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" image="clip"/>
                                                <connections>
...
