...
        )

        // Generate buttons content
        let buttonFont = MainFont.medium.withUI(size: 16)

        // Agree Button
        let okButtonLabel = EKProperty.createButtonLabel(font: buttonFont, color: EKColor(light: UIColor.black, dark: UIColor.black), text: "Agree")
        let okButton = EKProperty.ButtonContent(label: okButtonLabel, backgroundColor: .clear, highlightedBackgroundColor: EKColor(light: UIColor.gray, dark: UIColor.gray)) {
//            self.facebookLoginButton.sendActions(for: .touchUpInside)

            SwiftEntryKit.dismiss {
//                self.mainController.loginOld(self)
            }
...
