...
            SwiftEntryKit.dismiss()
        }
        
        // Disagree Button
        let disagreeButtonLabel = EKProperty.createButtonLabel(
            font: buttonFont, color: EKColor(light: UIColor.black, dark: UIColor.black),
            text: "No thanks"
        )
        
        let disagreeButton = EKProperty.ButtonContent(label: disagreeButtonLabel, backgroundColor: .clear, highlightedBackgroundColor: EKColor(light: UIColor.gray, dark: UIColor.gray) ) {
            SwiftEntryKit.dismiss()
        }
        
...
